--- a/main/templates/main.html
+++ b/main/templates/main.html
@@ -16,6 +16,8 @@
         <th>Amount</th>
         <th>Description</th>
         <th>Date Added</th>
+        <th>Add</th>
+        <th>Dec</th>
     </tr>
 
     {% comment %} Berikut cara memperlihatkan data produk di bawah baris ini {% endcomment %}
@@ -27,6 +29,24 @@
             <td>{{product.amount}}</td>
             <td>{{product.description}}</td>
             <td>{{product.date_added}}</td>
+            <td>
+                <form method="post" action="{% url 'main:increment' product.id %}">
+                    {% csrf_token %}
+                    <button type="submit" style="width: 100%;">+</button>
+                </form>
+            </td>
+            <td>
+                <form method="post" action="{% url 'main:decrement' product.id %}">
+                    {% csrf_token %}
+                    <button type="submit" style="width: 100%;">-</button>
+                </form>
+            </td>
+            <td >
+                <form method="post" action="{% url 'main:delete' product.id %}">
+                    {% csrf_token %}
+                    <button type="submit" style="color:rgb(245, 77, 35); width: 100%;">DEL</button>
+                </form>
+            </td>
         </tr>
     {% endfor %}
 </table>
