--- a/main/templates/main.html
+++ b/main/templates/main.html
@@ -1,6 +1,30 @@
 {% extends 'base.html' %}
 
 {% block content %}
+<nav class="navbar navbar-expand-lg bg-body-tertiary">
+  <div class="container-fluid">
+    <span class="navbar-brand mb-0 h1">Shopping List</span>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+      <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+        <li class="nav-item">
+          <a class="nav-link active" aria-current="page" href="{% url 'main:show_main' %}">Home</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="{% url 'main:create_product' %}">Add Product</a>
+        </li>
+          <li class="nav-item">
+          <a class="nav-link" href="{% url 'main:logout' %}">Logout</a>
+        </li>
+          <li class="nav-item">
+          <a class="nav-link disabled" aria-disabled="true">Sesi terakhir login: {{ last_login }}</a>
+        </li>
+    </div>
+  </div>
+</nav>
+
     <h1>Shopping List Page</h1>
 
     <h5>Name:</h5>
@@ -8,62 +32,21 @@
 
     <h5>Class:</h5>
     <p>{{class}}</p>
-	
-	<table>
-    <tr>
-        <th>Name</th>
-        <th>Price</th>
-        <th>Amount</th>
-        <th>Description</th>
-        <th>Date Added</th>
-        <th>Add</th>
-        <th>Dec</th>
-    </tr>
-
-    {% comment %} Berikut cara memperlihatkan data produk di bawah baris ini {% endcomment %}
 
     {% for product in products %}
         <tr>
-            <td>{{product.name}}</td>
-            <td>{{product.price}}</td>
-            <td>{{product.amount}}</td>
-            <td>{{product.description}}</td>
-            <td>{{product.date_added}}</td>
-            <td>
-                <form method="post" action="{% url 'main:increment' product.id %}">
-                    {% csrf_token %}
-                    <button type="submit" style="width: 100%;">+</button>
-                </form>
-            </td>
-            <td>
-                <form method="post" action="{% url 'main:decrement' product.id %}">
-                    {% csrf_token %}
-                    <button type="submit" style="width: 100%;">-</button>
-                </form>
-            </td>
-            <td >
-                <form method="post" action="{% url 'main:delete' product.id %}">
-                    {% csrf_token %}
-                    <button type="submit" style="color:rgb(245, 77, 35); width: 100%;">DEL</button>
-                </form>
-            </td>
-        </tr>
+            <div class="card" style="width: 18rem;">
+  <div class="card-body">
+    <h5 class="card-title">{{product.name}}</h5>
+      <h6 class="card-subtitle mb-2 text-body-secondary">Price: {{product.price}} Amount: {{product.amount}}</h6>
+    <p class="card-text">{{product.description}}</p>
+      <div class="btn-group" role="group" aria-label="Basic example">
+      <a href="{% url 'main:increment' product.id %}" class="btn btn-primary">+</a>
+      <a href="{% url 'main:decrement' product.id %}" class="btn btn-primary">-</a>
+          <a href="{% url 'main:delete' product.id %}" class="btn btn-primary">Delete</a>
+          </div>
+  </div>
+</div>
     {% endfor %}
-</table>
 
-<br />
-
-<a href="{% url 'main:create_product' %}">
-    <button>
-        Add New Product
-    </button>
-</a>
-
-<h5>Sesi terakhir login: {{ last_login }}</h5>
-
-<a href="{% url 'main:logout' %}">
-    <button>
-        Logout
-    </button>
-</a>
 {% endblock content %}
