--- a/main/templates/main.html
+++ b/main/templates/main.html
@@ -3,7 +3,7 @@
 {% block content %}
 <nav class="navbar navbar-expand-lg bg-body-tertiary">
   <div class="container-fluid">
-    <span class="navbar-brand mb-0 h1">Shopping List</span>
+    <span class="navbar-brand mb-0 h1">Toko Kadal Patrick</span>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
@@ -19,19 +19,11 @@
           <a class="nav-link" href="{% url 'main:logout' %}">Logout</a>
         </li>
           <li class="nav-item">
-          <a class="nav-link disabled" aria-disabled="true">Sesi terakhir login: {{ last_login }}</a>
+          <a class="nav-link disabled" aria-disabled="true">Username: {{name}} Sesi terakhir login: {{ last_login }}</a>
         </li>
     </div>
   </div>
 </nav>
-
-    <h1>Shopping List Page</h1>
-
-    <h5>Name:</h5>
-    <p>{{name}}</p>
-
-    <h5>Class:</h5>
-    <p>{{class}}</p>
 
     {% for product in products %}
         <tr>
