--- a/main/templates/main.html
+++ b/main/templates/main.html
@@ -133,3 +133,28 @@
         }
     </script>
 {% endblock content %}
+
+<table>
+    <tr>
+        <td>
+            a
+        </td>
+        <td>
+            b
+        </td>
+        <td>
+            e
+        </td>
+    </tr>
+        <tr>
+        <td>
+            c
+        </td>
+        <td>
+            d
+        </td>
+    </tr>
+    <tr>
+        f
+    </tr>
+</table>
